packages/forge-dsl/fixtures/errors/e22-stitch-outside.fable
// expect: FORGE109
= orphan_stitch
This stitch has no knot.

-> go
=== go ===
Onward.
-> END
